pijama_driver/tests/type_check/pass/bindings/mod.rs
use crate::test_type;

use pijama_core::ty::Ty;

test_type!(bind_int_to_int, Ok(Ty::Int));
